Bug 1695574 - Make `PresShell::EventHandler::HandleEventUsingCoordinates` keep handling touch events after preceding pointer event target is removed r=smaug,edgar,dom-core

As far as investigating the behavior of the other browsers, touch events are
dispatched the same target as the preceding `pointerdown` even after the target
is removed from the DOM tree.  However, the following pointer events are
dispatched on the target as usual (i.e., the element under the pointer except
when the pointer is captured).  However, our code stops handling touch events
if the preceding `pointerdown` removes the target and not dispatching
`touchstart` causes not dispatching the following touch events so that no
`click` event is fired.

This patch makes the touch event dispatching path work without frame and
keep handling even with an orphan event target.

Differential Revision: https://phabricator.services.mozilla.com/D202811